--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="1.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -39,6 +39,6 @@
         <div class="box20 b op" data-value="=">=</div>
     </div>
 </div>
-<script src="1.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
